tests/snapshots/snapshot_tests__workflow_exchange_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
═══ Step 1 ─ MyInfo — home screen ══════════════════════════
                                * Alice Smith *

┌──────────────────────────────────────────────────────────────────────────────┐
│ ▸ Email alice@company.com (Work)                                             │
│   Phone +41 79 123 45 67 (Mobile)                                            │
│   Website https://alice.example.com (Blog)                                   │
└──────────────────────────────────────────────────────────────────────────────┘















[a] Add Entry  [Enter] Group View  [?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit

═══ Step 2 ─ Exchange — press '1' (Exchange tab) ═══════════
                               [2/6]  ○ ● ○ ○ ○ ○
                              * Share Your Code *

┌ QR Code ─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  ┌──────────────┐                                                            │
│  │  ▄▄▄▄  ▄▄▄▄ │                                                             │
│  │  █  █  █  █ │                                                             │
│  │  ▀▀▀▀  ▀▀▀▀ │                                                             │
│  └──────────────┘                                                            │
│                                                                              │
│  [PUBLIC_ID]...                                 │
│  Alice Smith                                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[Enter] Scan Their Code  [?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit

═══ Step 3 ─ Contacts — press '3' (view exchanged contacts) 
                                 * Contacts *

┌ Contacts ────────────────────────────────────────────────────────────────────┐
│  No contacts yet. Use Exchange to add one.                                   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
















[?] help  [Esc] back  [q] quit
  1 Exchange  │ 2 ★ MyInfo  │ 3 Contacts  │ 4 Settings │  5 Help  │  [q] Quit
