tests/snapshots/snapshot_tests__workflow_onboarding_edited.snap
---
source: tests/snapshot_tests.rs
expression: output
---
═══ Step 1 ─ SetupWelcome — no identity detected ═══════════
                             * Welcome to Vauchi *
                         Privacy-focused contact cards.

┌  ────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private by design                                                       │
│      Your data is end-to-end encrypted and never leaves your control.        │
│                                                                              │
│  [D] Multi-device                                                            │
│      Use Vauchi on all your devices with seamless sync.                      │
└──────────────────────────────────────────────────────────────────────────────┘












[Enter] Create new identity  [h] I already have an identity  [q] quit

═══ Step 2 ─ IdentityCheck → press 'Create New' ════════════
                            [1/9]  ● ○ ○ ○ ○ ○ ○ ○ ○
                             * Welcome to Vauchi *
                           Your contacts, your rules.

┌ Why Vauchi? ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private                                                                 │
│      End-to-end encrypted contact cards                                      │
│                                                                              │
│  [~] Always up to date                                                       │
│      Update your card and contacts see changes automatically                 │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] Get Started  [q] quit

═══ Step 3 ─ LinkChoice → press 'Get Started' ══════════════
                            [1/9]  ● ○ ○ ○ ○ ○ ○ ○ ○
                             * Welcome to Vauchi *
                           Your contacts, your rules.

┌ Why Vauchi? ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private                                                                 │
│      End-to-end encrypted contact cards                                      │
│                                                                              │
│  [~] Always up to date                                                       │
│      Update your card and contacts see changes automatically                 │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] Get Started  [q] quit

═══ Step 4 ─ Welcome → press 'Next' ════════════════════════
                            [1/9]  ● ○ ○ ○ ○ ○ ○ ○ ○
                             * Welcome to Vauchi *
                           Your contacts, your rules.

┌ Why Vauchi? ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private                                                                 │
│      End-to-end encrypted contact cards                                      │
│                                                                              │
│  [~] Always up to date                                                       │
│      Update your card and contacts see changes automatically                 │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] Get Started  [q] quit

═══ Step 5 ─ CreateIdentity → enter name + press 'Next' ════
                            [1/9]  ● ○ ○ ○ ○ ○ ○ ○ ○
                             * Welcome to Vauchi *
                           Your contacts, your rules.

┌ Why Vauchi? ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│  [*] Private                                                                 │
│      End-to-end encrypted contact cards                                      │
│                                                                              │
│  [~] Always up to date                                                       │
│      Update your card and contacts see changes automatically                 │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘










[Enter] Get Started  [q] quit
