tests/snapshots/snapshot_tests__workflow_settings.snap
---
source: tests/snapshot_tests.rs
description: "Settings navigation: Settings → Privacy → Backup → Tor"
expression: output
---
═══ Step 1 ─ Settings — press '4' (Settings tab) ═══════════
                                    Settings

┌ Profile ─────────────────────────────────────────────────────────────────────┐
│ ▸ Display Name  Alice Smith                                                  │
│   Edit Profile  →                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
│   Delivery Receipts  [x]                                                     │
│   Suppress Presence  [ ]                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
│   Change Password  →                                                         │
│   Devices  1 device                                                          │
│   Duress PIN  →                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Network ─────────────────────────────────────────────────────────────────────┐
│   Relay URL                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
│   Emergency Wipe  Wipe All Data                                              │
└──────────────────────────────────────────────────────────────────────────────┘

[?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │  3 Contacts   │ 4 ★ Settings  │    5 Help

═══ Step 2 ─ Privacy — select Privacy & Data ═══════════════
                                 Privacy & Data

┌ [-] Data Status ─────────────────────────────────────────────────────────────┐
│                                                                              │
│  Deletion Status                                                             │
│  No deletion requested                                                       │
│                                                                              │
│  Consent                                                                     │
│  No data export requested                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│   data View My Data  See what data is stored locally                         │
│   consent Manage Consent  Review and update data consent                     │
└──────────────────────────────────────────────────────────────────────────────┘








[Enter] Export Data  [x] Delete All Data  [?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │  3 Contacts   │ 4 ★ Settings  │    5 Help

═══ Step 3 ─ Settings — press Esc (back) ═══════════════════
                                    Settings

┌ Profile ─────────────────────────────────────────────────────────────────────┐
│ ▸ Display Name  Alice Smith                                                  │
│   Edit Profile  →                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
│   Delivery Receipts  [x]                                                     │
│   Suppress Presence  [ ]                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
│   Change Password  →                                                         │
│   Devices  1 device                                                          │
│   Duress PIN  →                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Network ─────────────────────────────────────────────────────────────────────┐
│   Relay URL                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
│   Emergency Wipe  Wipe All Data                                              │
└──────────────────────────────────────────────────────────────────────────────┘

[?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │  3 Contacts   │ 4 ★ Settings  │    5 Help

═══ Step 4 ─ Backup — select Backup ════════════════════════
                                Backup & Recovery

┌ [B] Protect your data ───────────────────────────────────────────────────────┐
│                                                                              │
│  Backup                                                                      │
│  Create an encrypted backup of your identity and contacts.                   │
└──────────────────────────────────────────────────────────────────────────────┘















[Enter] Create Backup  [Enter] Restore Backup  [?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │  3 Contacts   │ 4 ★ Settings  │    5 Help

═══ Step 5 ─ Settings — press Esc (back) ═══════════════════
                                    Settings

┌ Profile ─────────────────────────────────────────────────────────────────────┐
│ ▸ Display Name  Alice Smith                                                  │
│   Edit Profile  →                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Privacy ─────────────────────────────────────────────────────────────────────┐
│   Delivery Receipts  [x]                                                     │
│   Suppress Presence  [ ]                                                     │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Security ────────────────────────────────────────────────────────────────────┐
│   Change Password  →                                                         │
│   Devices  1 device                                                          │
│   Duress PIN  →                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Network ─────────────────────────────────────────────────────────────────────┐
│   Relay URL                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Danger Zone ─────────────────────────────────────────────────────────────────┐
│   Emergency Wipe  Wipe All Data                                              │
└──────────────────────────────────────────────────────────────────────────────┘

[?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │  3 Contacts   │ 4 ★ Settings  │    5 Help

═══ Step 6 ─ TorSettings — select Tor Privacy ══════════════
                                   Tor Privacy

┌ [-] Tor Status ──────────────────────────────────────────────────────────────┐
│                                                                              │
│  Status                                                                      │
│  Disabled                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Tor Settings ────────────────────────────────────────────────────────────────┐
│ [ ] Enable Tor                                                               │
│     Route all traffic through Tor                                            │
│ [ ] Prefer Onion Services                                                    │
│     Use .onion addresses when available                                      │
└──────────────────────────────────────────────────────────────────────────────┘









[?] help  [Esc] back  [q] quit
   1 Exchange   │   2 MyInfo    │  3 Contacts   │ 4 ★ Settings  │    5 Help
